Fixed spacing on labels

--- a/assets/styles/wufoo.css
+++ b/assets/styles/wufoo.css
@@ -40,7 +40,7 @@ form li span label {
     padding-bottom: 75px;
 }
 .wufoo label.desc {
-  margin-bottom: 2em;
+  margin-bottom: 1em;
 }
 #title9 {
   margin-bottom: 0;
